Revert "Fix the alignment if the icnos a bit"
This reverts commit 9c6c3d8bcb0e5431209d4cec09401415e2817e95.

--- a/internal/static/css/twtxt.css
+++ b/internal/static/css/twtxt.css
@@ -1,7 +1,3 @@
-i[class*=icss-] {
-    margin: .2em .2em;
-}
-
 article p img {
     display: block;
 }
